--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
 .app-container{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-around; 
+  min-height: 61vh;
  
 }
 
